refactor: rename and removed unnecessary methods
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>